--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="lives">Lives: <span id="lives">3</span></div>
         <div class="grid" id="grid"></div>
         <div class="game-over hidden" id="gameOver">
-            <h2>Game Over!</h2>
+            <h2>Game Over! Stars: <span id="finalStars">0</span></h2>
             <button id="restart">Play Again</button>
         </div>
     </div>
