--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 </head>
 <body>
     <div class="game-container">
-        <div class="score">Stars: <span id="stars">0</span></div>
-        <div class="lives">Lives: <span id="lives">3</span></div>
+        <div class="header">
+            <div class="timer">Time left: <span id="timeLeft">0.0</span>s</div>
+            <div class="score">Stars: <span id="stars">0</span></div>
+            <div class="lives">Lives: <span id="lives">3</span></div>
+        </div>
         <div class="grid" id="grid"></div>
         <div class="game-over hidden" id="gameOver">
             <h2>Game Over! Stars: <span id="finalStars">0</span></h2>
