--- a/index.html
+++ b/index.html
@@ -1,22 +1,92 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Crab Hunter</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="game-container">
-        <div class="score">Stars: <span id="stars">0</span></div>
-        <div class="lives">Lives: <span id="lives">3</span></div>
-        <div class="timer-container">
-            <div class="timer-bar" id="timerBar"></div>
-        </div>
-        <div class="grid" id="grid"></div>
-        <div class="game-over hidden" id="gameOver">
-            <h2>Game Over! Stars: <span id="finalStars">0</span></h2>
-            <button id="restart">Play Again</button>
-        </div>
-    </div>
-    <script src="game.js"></script>
-</body>
-</html>
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background: #2c3e50;
+    font-family: Arial, sans-serif;
+    touch-action: manipulation;
+}
+
+.game-container {
+    text-align: center;
+    color: white;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(5, 60px);
+    gap: 10px;
+    margin: 20px auto;
+}
+
+.cell {
+    width: 60px;
+    height: 60px;
+    background: #34495e;
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+}
+
+.crab {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    bottom: -50px;
+    left: 5px;
+    transition: bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    background: url('assets/crab.png') no-repeat center/contain;
+}
+
+.crab.active {
+    bottom: 5px !important;
+}
+
+.game-over {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.9);
+    padding: 20px;
+    border-radius: 15px;
+    text-align: center;
+}
+
+.hidden {
+    display: none;
+}
+
+button {
+    padding: 12px 25px;
+    font-size: 18px;
+    cursor: pointer;
+    background: #27ae60;
+    border: none;
+    color: white;
+    border-radius: 8px;
+    transition: transform 0.2s;
+}
+
+button:active {
+    transform: scale(0.95);
+}
+
+.timer-container {
+    width: 300px;
+    height: 5px;
+    background: #34495e;
+    margin: 10px auto;
+    border-radius: 3px;
+    overflow: hidden;
+}
+
+.timer-bar {
+    height: 100%;
+    background: #27ae60;
+    width: 100%;
+    transition: width 0.1s linear;
+}
