--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div class="game-container">
         <div class="score">Stars: <span id="stars">0</span></div>
         <div class="lives">Lives: <span id="lives">3</span></div>
+        <div class="timer">Time left: <span id="timer">0.0s</span></div>
         <div class="grid" id="grid"></div>
         <div class="game-over hidden" id="gameOver">
             <h2>Game Over! Stars: <span id="finalStars">0</span></h2>
