--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Crab Hunter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,8 +11,8 @@
         <div class="lives">Lives: <span id="lives">3</span></div>
         <div class="grid" id="grid"></div>
         <div class="game-over hidden" id="gameOver">
-            <h2>Game Over! Stars: <span id="finalStars">0</span></h2>
-            <button id="restart">Play Again</button>
+            <h2>GAME OVER!<br>Stars: <span id="finalStars">0</span></h2>
+            <button id="restart">PLAY AGAIN</button>
         </div>
     </div>
     <script src="game.js"></script>
