--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="game-container">
+        <div id="idleTimer"></div>
         <div class="score">Stars: <span id="stars">0</span></div>
         <div class="lives">Lives: <span id="lives">3</span></div>
         <div class="grid" id="grid"></div>
