--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
 <body>
     <div id="timer">
         <div id="progress"></div>
-        <span>Осталось времени: 20 секунд</span>
+        <span>Time left: 20 seconds</span>
     </div>
 
     <div id="score">
@@ -21,9 +21,9 @@
     <div id="game-info" class="overlay">
         <div class="overlay-content">
             <h1>Succinct Code Challenge</h1>
-            <h2>POV Yinger: Докажи свою скорость в мире ZK L2</h2>
-            <h3>Твоя задача - выдать максимум кодов за 20 секунд</h3>
-            <button class="start-button">НАЧАТЬ ИСПЫТАНИЕ</button>
+            <h2>POV Yinger: PROVE UR SPEED</h2>
+            <h3>Your task is give out a maximum of codes in 20 seconds.</h3>
+            <button class="start-button">GO GO GO</button>
         </div>
     </div>
 
@@ -31,7 +31,7 @@
         <div class="overlay-content">
             <h1></h1>
             <h2></h2>
-            <button class="start-button">ИГРАТЬ СНОВА</button>
+            <button class="start-button">PLAY AGAIN</button>
         </div>
     </div>
 
