--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
         <div id="progress"></div>
         <span>Time left: 20 seconds</span>
     </div>
-
     <div id="score">
         <span>Codes: 0</span>
     </div>
-
     <div id="game-info" class="overlay">
         <div class="overlay-content">
             <h1>Succinct Code Challenge</h1>
@@ -26,15 +24,13 @@
             <button class="start-button">GO GO GO</button>
         </div>
     </div>
-
-    <div id="game-end" class="overlay" style="display: none;">
+    <div id="game-end" class="overlay hidden">
         <div class="overlay-content">
             <h1></h1>
             <h2></h2>
             <button class="start-button">PLAY AGAIN</button>
         </div>
     </div>
-
     <div id="game-field">
         <img src="img/member.png" draggable="false" id="m1" class="member-img" style="grid-area: m1;">
         <img src="img/member.png" draggable="false" id="m2" class="member-img" style="grid-area: m2;">
@@ -46,7 +42,6 @@
         <img src="img/member.png" draggable="false" id="m8" class="member-img" style="grid-area: m8;">
         <img src="img/member.png" draggable="false" id="m9" class="member-img" style="grid-area: m9;">
     </div>
-
     <script src="src/script.js"></script>
 </body>
 </html>
