--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="img/icon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="src/style.css">
     <title>Succinct Code Challenge</title>
 </head>
 <body>
+    <div class="cosmic-background"></div>
     <div id="timer">
         <div id="progress"></div>
         <span>Time left: 20 seconds</span>
@@ -21,14 +23,14 @@
             <h1>Succinct Code Challenge</h1>
             <h2>POV Yinger: PROVE UR SPEED</h2>
             <h3>Your task is give out a maximum of codes in 20 seconds.</h3>
-            <button class="start-button">GO GO GO</button>
+            <button class="start-button glitch-button">GO GO GO</button>
         </div>
     </div>
     <div id="game-end" class="overlay hidden">
         <div class="overlay-content">
-            <h1></h1>
-            <h2></h2>
-            <button class="start-button">PLAY AGAIN</button>
+            <h1 class="glitch-text"></h1>
+            <h2 class="typing-text"></h2>
+            <button class="start-button glitch-button">PLAY AGAIN</button>
         </div>
     </div>
     <div id="game-field">
