--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <div class="taskbar">
                 <div class="taskbar-icons">
                     <div class="taskbar-icon">
-                        <img src="img/computer-icon.svg" alt="Computer">
+                        <img src="img/icon.svg" alt="Computer">
                     </div>
                     <div class="taskbar-icon">
                         <img src="img/globe-icon.svg" alt="Browser">
