--- a/index.html
+++ b/index.html
@@ -362,13 +362,13 @@
                         <img src="img/icon.svg" alt="Computer">
                     </div>
                     <div class="taskbar-icon">
-                        <img src="img/globe-icon.svg" alt="Browser">
+                        <img src="img/Leaderboard.svg" alt="Browser">
                     </div>
                     <div class="taskbar-icon">
-                        <img src="img/folder-icon.svg" alt="Files">
+                        <img src="img/Explorer.svg" alt="Files">
                     </div>
                     <div class="taskbar-icon">
-                        <img src="img/settings-icon.svg" alt="Settings">
+                        <img src="img/SuperProver.svg" alt="Settings">
                     </div>
                 </div>
             </div>
