--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     <!-- Desktop Icons -->
     <div class="desktop-icons">
         <div class="desktop-icon">
-            <img src="img/readme.svg" class="desktop-icon-img" alt="PDF">
+            <img src="img/readme.jpg" class="desktop-icon-img" alt="PDF">
             <div class="desktop-icon-text">README.pdf</div>
         </div>
         <div class="desktop-icon">
