--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 
-                <!-- Игровое поле занимает оставшееся пространство -->
+                <!-- Игровое поле занимает оставшееся пространство - исправлено на 2x4 сетку (8 элементов) -->
                 <div id="game-field">
                     <img src="img/member.png" draggable="false" id="m1" class="member-img" style="grid-area: m1;">
                     <img src="img/member.png" draggable="false" id="m2" class="member-img" style="grid-area: m2;">
@@ -96,7 +96,6 @@
                     <img src="img/member.png" draggable="false" id="m6" class="member-img" style="grid-area: m6;">
                     <img src="img/member.png" draggable="false" id="m7" class="member-img" style="grid-area: m7;">
                     <img src="img/member.png" draggable="false" id="m8" class="member-img" style="grid-area: m8;">
-                    <img src="img/member.png" draggable="false" id="m9" class="member-img" style="grid-area: m9;">
                 </div>
             </div>
             
