--- a/index.html
+++ b/index.html
@@ -150,6 +150,6 @@
         </div>
     </div>
     
-    <script src="game.js"></script>
+    <script src="src/game.js"></script>
 </body>
 </html>
