--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                 subText = `You gave out ${score} codes. Try working like a Yinger next time!`;
                 gifSrc = 'img/middle.gif';
             } else {
-                resultText = 'ARE YOU GOING TO PROVE SOMETHING???';
+                resultText = 'ARE YOU GOING TO PROVE???';
                 subText = `Given only ${score} codes. You either didn't figure out how to do it, or you fell asleep...`;
                 gifSrc = 'img/low.gif';
             }
