--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="src/style.css">
-    <title>Crisis of Trust</title>
+    <title>Gimme a code</title>
     <style>
         /* Custom cursor style for the entire document */
         body {
@@ -34,7 +34,7 @@
             width: auto;
             height: auto;
             object-fit: contain;
-            filter: contrast(1.1) brightness(0.7) opacity(0.3); /* Make it semi-transparent */
+            filter: contrast(1.1) brightness(0.7) opacity(0.3); /* 30% opacity */
             transition: all 0.5s ease;
         }
         
@@ -379,7 +379,7 @@
         <div class="overlay-content">
             <h1>CRISIS OF TRUST</h1>
             <h2>Welcome to the Succinct Challenge</h2>
-            <p class="game-description">Click on the members as fast as you can when they appear. Give out as many codes as possible within the time limit!</p>
+            <p class="game-description">Yinger POV: Click on the members as fast as you can when they appear. Give out as many codes as possible within the time limit!</p>
             <button class="glitch-button" id="start-button">Start Game</button>
         </div>
     </div>
@@ -738,7 +738,7 @@
             // Плавно показываем GIF
             setTimeout(() => {
                 resultGif.style.transition = 'opacity 1s ease';
-                resultGif.style.opacity = 0.3;
+                resultGif.style.opacity = 0.3;  // 30% opacity
             }, 300);
             
             // Анимируем подтекст
