--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <div class="window-button minimize"></div>
                 <div class="window-button maximize"></div>
             </div>
-            <div class="window-title">CRISIS OF TRUST</div>
+            <div class="window-title">GIMME A CODE</div>
         </div>
         
         <div class="window-content">
@@ -384,7 +384,7 @@
     <!-- Game Start Overlay -->
     <div class="overlay" id="start-overlay">
         <div class="overlay-content">
-            <h1>CRISIS OF TRUST</h1>
+            <h1>GIMME A CODE</h1>
             <h2>Welcome to the Succinct Challenge</h2>
             <p class="game-description">Yinger POV: Click on the members as fast as you can when they appear. Give out as many codes as possible within the time limit!</p>
             <button class="glitch-button" id="start-button">Start Game</button>
