--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                             <div class="terminal-line">$ Ready to prove your speed...</div>
                             <div class="terminal-line">$ Starting new game session</div>
                             <div class="terminal-line">$ Quantum encryption active</div>
-                            <div class="terminal-line">$ Target: Collect trust codes</div>
+                            <div class="terminal-line">$ Target: Give max codes</div>
                             <div class="terminal-credit">from alexanderblv to Succinct fam with ❤️</div>
                         </div>
                         <!-- Falling images container will be populated by JS -->
