--- a/index.html
+++ b/index.html
@@ -373,11 +373,11 @@
     <div class="desktop-icons">
         <div class="desktop-icon" id="readme-icon">
             <img src="img/readme.png" class="desktop-icon-img" alt="PDF">
-            <div class="desktop-icon-text">README.pdf</div>
+            <div class="desktop-icon-text">README.git</div>
         </div>
         <div class="desktop-icon" id="project-icon">
-            <img src="img/audio-icon.svg" class="desktop-icon-img" alt="Audio">
-            <div class="desktop-icon-text">Project.mp4</div>
+            <img src="img/readme.png" class="desktop-icon-img" alt="PDF">
+            <div class="desktop-icon-text">alexanderblv X.com</div>
         </div>
     </div>
     
