--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     <!-- Desktop Icons -->
     <div class="desktop-icons">
         <div class="desktop-icon" id="readme-icon">
-            <img src="img/readme.png" class="desktop-icon-img" alt="PDF">
+            <img src="img/git.png" class="desktop-icon-img" alt="PDF">
             <div class="desktop-icon-text">README.git</div>
         </div>
         <div class="desktop-icon" id="project-icon">
