--- a/index.html
+++ b/index.html
@@ -838,5 +838,8 @@
             }
         });
     </script>
+    
+    <!-- Добавляем SP1 скрипт в самом конце body -->
+    <script src="sp1.js"></script>
 </body>
 </html>
