Update SP1 documentation links to the new location

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
     <!-- SP1 info tag -->
     <div class="sp1-info" style="display: none;">
         <p>This game uses SP1 zero-knowledge proof technology to verify game results securely and transparently.</p>
-        <a href="https://docs.succinct.xyz/docs/sp1/" target="_blank">Learn more about SP1</a>
+        <a href="https://docs.succinct.xyz/sp1" target="_blank">Learn more about SP1</a>
     </div>
     
     <!-- Scripts -->
